# modc

./: AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  README  T1.t.S  configure.ac  gitcl2gnucl
cmake/: FindBISON.cmake  FindFLEX.cmake
include/: Makefile.am
include/cmod/: cmod-backend.h  cmod-dot.h  cmod.h  vectors.h
src/: CMakeLists.txt  Makefile.am  bb-unix-i386.c  bb-win32-i386.c  config.h.in.cmake  dd-util.c  dd-vec.c  ii-mod-dot.c  ii-toplev.c  mm-cmod.c  ss-lexer.l  ss-parser.y
testsuite/: Example1.mod  Example2.mod  Example3.mod  Example4.mod  Example5.mod  T1.t
